# mbs

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  MBS_COMMAND_LOG.md  MBS_COMPILER_README.md  MBS_FAILURE_LOG.md  MBS_FIX_LOG.md  MBS_READINESS_REPORT.md  README.md  SECURITY.md  mbs_compiler.py  pyproject.toml
.github/: copilot-instructions.md
benchmarks/: ci_gate.yaml  fintech_transaction_risk_gate.yaml  fixture_smoke_gate.yaml  incident_response_gate.yaml  local_fintech_baselines.yaml  model_suites.json  models.yaml  multi_schema_fixture_gate.yaml  oss_structured_output_matrix.json  provider_gate.example.yaml  provider_lang_gate.example.yaml  support_ticket_triage_gate.yaml
docs/: mbs_agent_tool_contract_v1.md  mbs_agent_tools.md  mbs_azure_provider_benchmark_may2026.md  mbs_bench.md  mbs_ci_regression_gate.md  mbs_cli_command_matrix_20260517.md  mbs_compliance_security_boundary.md  mbs_enterprise_blocker_disposition.md  mbs_enterprise_compatibility_matrix.md  mbs_enterprise_external_evidence_requests.md  mbs_evidence_brief.md  mbs_evidence_pack.md  mbs_failure_triage_examples.md  mbs_hard_agent_routing_label_review_may2026.md  mbs_json_mode_tool_calling_plan.md  mbs_lang.md  mbs_lang_matrix.md  mbs_lang_provider_evidence.md  mbs_leonardo_hpc_evidence_20260517.md  mbs_mn5_vs_azure_comparison_may2026.md  mbs_model_behavior_guidance.md  mbs_model_family_failure_map_20260517.md  mbs_nested_provider_matrix_may2026.md  mbs_open_source_model_testing.md  mbs_oss_mn5_benchmark_may2026.md  mbs_provider_recipes.md  mbs_public_benchmark_report.md  mbs_quickstart.md  (+7 more)
(+194 files in other folders)
